test/integration/bad/expect_statement_seq_close_brace_4.stan
parameters {
  real y;
}
model {
  y ~ normal(0,1);
}
generated quantities {
  array[2,3] int vs;

